# LicheeRV-Nano

./: CMakeLists.txt  README.md  build.sh
apps/src/: main.c
docs/: Changelogs.md
drivers/licheerv/cpu/: cpu.c
inc/: cpu.h
regs/cpu/: cpu_c906_reg.c  cpu_c906_reg.h
